force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Is_thr_Secondary_Site_Assessment_Cnct__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_thr_Secondary_Site_Assessment_Cnct__c</fullName>
    <label>Is there a sec. Site Assessment Cnct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>