force-app/main/default/objects/FS_Customer_Input__c/fields/FS_isSubmitted__c.field-meta.xml
<CustomField>
    <fullName>FS_isSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSubmitted</label>
    <type>Checkbox</type>
</CustomField>