force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Kitchen_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_Fill_Requirements__c</fullName>
    <label>What type of ice is used for Manual Fill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Approved Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>