force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Kitchen_Ice_Maker_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_Maker_Installed__c</fullName>
    <label>BOH Ice-Maker Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>