force-app/main/default/objects/FS_Customer_Input__c/fields/FS_kitchen_Ice_maker_MFG__c.field-meta.xml
<CustomField>
    <fullName>FS_kitchen_Ice_maker_MFG__c</fullName>
    <label>Provide Mfg. Back of House Ice-Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Cornelius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>