force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Kitchen_Ice_maker_Model_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_maker_Model_no__c</fullName>
    <label>Provide specific Model# for BackOfHouse</label>
    <length>48</length>
    <type>Text</type>
</CustomField>