force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Kitchen_Type_of_Ice__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Type_of_Ice__c</fullName>
    <label>Indicate type of ice from Back of House</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Approved Soft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>