force-app/main/default/objects/FS_Customer_Input__c/fields/FS_known_construction_needs_i_e_cut_c__c.field-meta.xml
<CustomField>
    <fullName>FS_known_construction_needs_i_e_cut_c__c</fullName>
    <label>Any known construction needs (i.e. cut c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>