force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Legacy_Dispenser_Install_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Legacy_Dispenser_Install_Notes__c</fullName>
    <label>Legacy Dispenser Install Notes:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>