force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Line_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Line_Installation_Date__c</fullName>
    <label>Line Installation Date</label>
    <type>Date</type>
</CustomField>