force-app/main/default/objects/FS_Customer_Input__c/fields/FS_List_of_approved_Ice_Makers_Mfrs__c.field-meta.xml
<CustomField>
    <fullName>FS_List_of_approved_Ice_Makers_Mfrs__c</fullName>
    <label>List of approved Ice Makers Mfrs.?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>