force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Name_of_Sweetener_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Name_of_Sweetener_Distributor__c</fullName>
    <label>Name of Sweetener Distributor</label>
    <length>64</length>
    <type>Text</type>
</CustomField>