force-app/main/default/objects/FS_Customer_Input__c/fields/FS_NewRemodelOutletOnlyEquipmentInstall__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyEquipmentInstall__c</fullName>
    <label>New/Remodel OutletOnly-Equipment Install</label>
    <type>Date</type>
</CustomField>