force-app/main/default/objects/FS_Customer_Input__c/fields/FS_NewRemodelOutletOnlyLineInstallation__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyLineInstallation__c</fullName>
    <label>New/Remodel OutletOnly-LineInstallation</label>
    <type>Date</type>
</CustomField>