force-app/main/default/objects/FS_Customer_Input__c/fields/FS_NewRemodelOutletOnlyProjectedFireUp__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedFireUp__c</fullName>
    <label>New/Remodel OutletOnly-Projected Fire-Up</label>
    <type>Date</type>
</CustomField>