force-app/main/default/objects/FS_Customer_Input__c/fields/FS_NewRemodelOutletOnlyProjectedOpening__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedOpening__c</fullName>
    <label>New/Remodel OutletOnly-ProjectedOpening</label>
    <type>Date</type>
</CustomField>