force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Nightly_Connection_Time2_Dispenser_AM__c.field-meta.xml
<CustomField>
    <fullName>FS_Nightly_Connection_Time2_Dispenser_AM__c</fullName>
    <label>Nightly Connection Time2 Dispenser (AM)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>