force-app/main/default/objects/FS_Customer_Input__c/fields/FS_OB_Trainer__c.field-meta.xml
<CustomField>
    <fullName>FS_OB_Trainer__c</fullName>
    <label>Select On-Boarding Trainer Drop-down</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Footprint</fullName>
            </value>
            <value>
                <fullName>Service Provider(7000 Only)</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Not Needed / 2nd Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>