force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Offering_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Offering_2__c</fullName>
    <description>List 2 letter code designation, offering name, and finished ounces. (ex: SM, SMALL, 8 oz)</description>
    <label>Offering 2:</label>
    <length>48</length>
    <type>Text</type>
</CustomField>