force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Offering_3__c.field-meta.xml
<CustomField>
    <fullName>FS_Offering_3__c</fullName>
    <description>List 2 letter code designation, offering name, and finished ounces. (ex: MD, Medium, 10 oz)</description>
    <label>Offering 3:</label>
    <length>48</length>
    <type>Text</type>
</CustomField>