force-app/main/default/objects/FS_Customer_Input__c/fields/FS_On_boarding_cnct_phn_no__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_cnct_phn_no__c</fullName>
    <label>Provide On-Boarding Contact Phone Number</label>
    <type>Phone</type>
</CustomField>