force-app/main/default/objects/FS_Customer_Input__c/fields/FS_On_boarding_contact_email__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_contact_email__c</fullName>
    <label>Provide On-Boarding Contact Email</label>
    <type>Email</type>
</CustomField>