force-app/main/default/objects/FS_Customer_Input__c/fields/FS_On_boarding_contact_name__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_contact_name__c</fullName>
    <label>Provide On-Boarding Contact Name</label>
    <length>138</length>
    <type>Text</type>
</CustomField>