force-app/main/default/objects/FS_Customer_Input__c/fields/FS_On_boarding_date_and_time_requested__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_date_and_time_requested__c</fullName>
    <label>Select On-Boarding Requested Date</label>
    <type>Date</type>
</CustomField>