force-app/main/default/objects/FS_Customer_Input__c/fields/FS_On_boarding_ship_to_address__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_ship_to_address__c</fullName>
    <label>Ship-to-Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>