force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Opening_date_time__c.field-meta.xml
<CustomField>
    <fullName>FS_Opening_date_time__c</fullName>
    <label>Opening date &amp; time</label>
    <type>DateTime</type>
</CustomField>