force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Order_Conf_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Conf_Contact_Name__c</fullName>
    <label>Order Conf. Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>