force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Order_Conf_Same_as_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Conf_Same_as_Admin_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Conf. Same as Admin Contact</label>
    <type>Checkbox</type>
</CustomField>