force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Other_Legacy_Equipment__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Legacy_Equipment__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>41571-Regulator Legacy II</fullName>
            </value>
            <value>
                <fullName>45991-Bevariety pump deck w/ 100&#39; harness</fullName>
            </value>
            <value>
                <fullName>46253-Bevariety icemaker adapter kit (Scotsman EH-222)</fullName>
            </value>
            <value>
                <fullName>43536-Carbonator / Bevariety Pump Deck Shelf</fullName>
            </value>
            <value>
                <fullName>46280-Freestyle/Bevariety hybrid rack (includes pumps)</fullName>
            </value>
            <value>
                <fullName>45819-Regulator, Bevariety</fullName>
            </value>
            <value>
                <fullName>46098-Manifold</fullName>
            </value>
            <value>
                <fullName>45080-15x22 Ice Tainer</fullName>
            </value>
            <value>
                <fullName>44621 Leg Assembly for 15x22 Ice Tainer</fullName>
            </value>
            <value>
                <fullName>45278-Auto Fill Station (Duke or Stoelting 118/218/318)</fullName>
            </value>
            <value>
                <fullName>45768-Auto Fill Station (Stoelting 157/257</fullName>
            </value>
            <value>
                <fullName>44610-Drop In 23x23 cabinet stand</fullName>
            </value>
            <value>
                <fullName>41568-Carbonator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>