force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Other_Legacy_Equipment_Activity_i_e_G__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Legacy_Equipment_Activity_i_e_G__c</fullName>
    <label>Other Legacy Equipment Activity, i.e., G</label>
    <length>16</length>
    <type>Text</type>
</CustomField>