force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Other_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Qty__c</fullName>
    <label>Qty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>