force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Other_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Special_Request__c</fullName>
    <label>Preapproved Other Brand Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>