force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_email__c</fullName>
    <label>Outlet Contact email</label>
    <type>Email</type>
</CustomField>