force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_name__c</fullName>
    <label>Outlet Contact name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>