force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Contact_phone_cell__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_phone_cell__c</fullName>
    <label>Outlet Contact phone(cell)</label>
    <type>Phone</type>
</CustomField>