force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Contact_Phone_store__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_Phone_store__c</fullName>
    <label>Outlet Contact Phone(store)</label>
    <type>Phone</type>
</CustomField>