force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Contact_title__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_title__c</fullName>
    <label>Outlet Contact title</label>
    <length>32</length>
    <type>Text</type>
</CustomField>