force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Store__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Store__c</fullName>
    <label>Outlet/Store #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>