force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>