force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>