force-app/main/default/objects/FS_Customer_Input__c/fields/FS_percnt_of_volume_going_thru_Freestyle__c.field-meta.xml
<CustomField>
    <fullName>FS_percnt_of_volume_going_thru_Freestyle__c</fullName>
    <label>% of volume going thru Freestyle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>