force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Pibb_or_Dr_Pepper__c.field-meta.xml
<CustomField>
    <fullName>FS_Pibb_or_Dr_Pepper__c</fullName>
    <label>Select Spicy Cherry Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pibb/Pibb Zero</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Dasani</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Powerade</fullName>
            </value>
            <value>
                <fullName>Pibb/Pibb Zero/Add FUZE/Remove Vitaminwater</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Dasani</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Powerade</fullName>
            </value>
            <value>
                <fullName>Dr Pepper/Diet Dr Pepper/Add FUZE/Remove Vitaminwater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>