force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Provide_Mfg_7K_Top_Mounted_Ice_Maker__c.field-meta.xml
<CustomField>
    <fullName>FS_Provide_Mfg_7K_Top_Mounted_Ice_Maker__c</fullName>
    <label>Provide Mfg. of Top Mounted Ice Maker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Cornelius</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>