force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Provide_Model_7000S_TopMount_IceMakr__c.field-meta.xml
<CustomField>
    <fullName>FS_Provide_Model_7000S_TopMount_IceMakr__c</fullName>
    <label>IM Model</label>
    <length>48</length>
    <type>Text</type>
</CustomField>