force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Pump_Action__c.field-meta.xml
<CustomField>
    <fullName>FS_Pump_Action__c</fullName>
    <label>Action:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>