force-app/main/default/objects/FS_Customer_Input__c/fields/FS_Pumps__c.field-meta.xml
<CustomField>
    <fullName>FS_Pumps__c</fullName>
    <label>Pumps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>44221-PUMP BIB INST 1 PUMP KIT</fullName>
            </value>
            <value>
                <fullName>44233-PUMP BIB INST 2 PUMP KIT</fullName>
            </value>
            <value>
                <fullName>43972-PUMP BIB INST 4 PUMP KIT</fullName>
            </value>
            <value>
                <fullName>45220-Slush pump</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>