force-app/main/default/objects/FS_Customer_Input__c/fields/FS_RemoveAllFTNLegacyServeDispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_RemoveAllFTNLegacyServeDispensers__c</fullName>
    <label>Remove All FTN(Legacy) Serve Dispensers?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>